<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:focusable="true"/>

        <TextView
            android:id="@+id/text_view_countdown"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/_00_00"
            android:textColor="@android:color/black"
            android:textSize="80sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_start_pause"
            android:layout_width="395dp"
            android:layout_height="75dp"
            android:layout_below="@+id/text_view_countdown"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/start"
            app:layout_constraintBottom_toTopOf="@+id/buttonreset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_countdown" />

        <Button
            android:id="@+id/buttonreset"
            android:layout_width="395dp"
            android:layout_height="75dp"
            android:layout_below="@+id/button_start_pause"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/reset"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_start_pause"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_set"
            android:layout_width="104dp"
            android:layout_height="154dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/set"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/switch_firstbell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="92dp"
            android:text="@string/first_bell"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/switch_secondbell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/second_bell"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_firstbell" />

        <EditText
            android:id="@+id/set_time_value"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="number|numberDecimal"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/set_firstbell_value"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="72dp"
            android:ems="10"
            android:inputType="number|numberDecimal"
            app:layout_constraintStart_toEndOf="@+id/switch_firstbell"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/set_secondbell_value"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="number|numberDecimal"
            app:layout_constraintStart_toEndOf="@+id/switch_secondbell"
            app:layout_constraintTop_toBottomOf="@+id/set_firstbell_value" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="92dp"
            android:text="@string/minute_desc2"
            app:layout_constraintStart_toEndOf="@+id/set_firstbell_value"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/minute_desc2"
            app:layout_constraintStart_toEndOf="@+id/set_secondbell_value"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="44dp"
            android:text="@string/minute_desc"
            app:layout_constraintStart_toEndOf="@+id/set_time_value"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="44dp"
            android:text="@string/length"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>